hphp/hack/test/typecheck/nameof/parsing/nameof_lfun.php.exp
File "nameof_lfun.php", line 5, characters 12-20:
`nameof` can only be used with a class (Parsing[1002])
