hphp/hack/test/typecheck/nameof/parsing/nameof_lfun.php
<?hh

class C {
  public static function f(): void {
    nameof $x ==> $x;
  }
}
